MCleaning up from the validator

--- a/homework_6/product-browsing.html
+++ b/homework_6/product-browsing.html
@@ -15,6 +15,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
+
 <!--Image citations: 
 Photos via Unsplash and Flickr
 Michael Fallon - https://unsplash.com/photos/DnGGIffnjTY
@@ -50,7 +51,7 @@ Creating a Brand - https://unsplash.com/photos/JSOgX6eaYy4-->
 <h1 class="FlavorsHeader">Flavors</h1>
 
 <!--Product Boxes-->
-<a href="product-detail copy.html">
+<a href="product-detail-copy.html">
     <div id="ProductBox1">
          <img src="Images/Pumpkin_Spice.png" class="ProductPhoto" alt="a glazed cinnamon bun with pumpkin pieces">
     </div>
