Practicing pseudo code for the assignment

--- a/homework_6/product-detail-copy.html
+++ b/homework_6/product-detail-copy.html
@@ -41,7 +41,7 @@ Creating a Brand - https://unsplash.com/photos/JSOgX6eaYy4-->
                 <form action="shopping_cart.html" method="post">
                     <label for="glazeType" id="glazeLabel">Choose your glaze </label>
                 <br>
-                <select id="glazeType" class="test" name="glazeType">
+                <select id="glazeType" name="glazeType">
                     <option value="vanillaMilk">Vanilla Milk (recommended)</option>
                     <option value="sugarMilk">Sugar Milk</option>
                     <option value="doubleChocolate">Double Chocolate</option>
@@ -59,7 +59,7 @@ Creating a Brand - https://unsplash.com/photos/JSOgX6eaYy4-->
                 <!--<input id="submit" type="submit" value="Submit"/>-->
                 </form>
                 <br>
-                <button onclick="increaseCartItemCount()">test</button>
+                <button onclick="detailsButtonClick()">Submit</button>
             </div>
             <div id="exitLogoSide">
                 <a href="product-browsing.html"><img id="exitLogo" src="Images/Exit.png" alt="exit button image"></a>
