Testing out various things in office hours

--- a/homework_6/shopping_cart.html
+++ b/homework_6/shopping_cart.html
@@ -45,7 +45,7 @@ Creating a Brand - https://unsplash.com/photos/JSOgX6eaYy4-->
 <h1 class="FlavorsHeader">Your Cart</h1>
 
 <!--Cart Item Boxes-->
-<div class="parentCartItemDiv">
+<div id="parentCartItemDiv">
 <!--Cart Item 1-->
 <div class="cartItemBackground">
     <div class="cartImageSide">
