Putting in the visual functionality

--- a/homework_6B/shopping_cart.html
+++ b/homework_6B/shopping_cart.html
@@ -45,48 +45,7 @@ Creating a Brand - https://unsplash.com/photos/JSOgX6eaYy4-->
 <h1 class="FlavorsHeader">Your Cart</h1>
 
 <!--Cart Item Boxes-->
-<div id="parentCartItemDiv">
-<!--Cart Item 1-->
-<div class="cartItemBackground">
-    <div class="cartImageSide">
-        <img class="cartImage" src="Images/pumpkin_with_border.png" alt="a pumpkin spice bun with an orange glaze">
-    </div>
-    <div class="itemDetailsSideCart">
-        <p><b>Pumpkin Spice Bun</b></p>
-        <p>Vanilla Milk Glaze</p>
-        <!--Citation: https://uxplanet.org/how-to-create-a-shopping-cart-ui-using-html-css-e5db3cd55aa0-->
-        <div class="itemCounter">
-            <div class="quantityButton">+</div>
-            <div class="itemCount">12</div>
-            <div class="quantityButton">-</div>
-        </div>
-    </div>
-    <div class="moneyRemoveCart">
-        <p><b>$24.00</b></p>
-        <p class="removeText" onclick="removeCartItem()">Remove</p>
-    </div>
-</div>
-<!--Cart Item 2-->
-<div class="cartItemBackground">
-    <div class="cartImageSide">
-        <img class="cartImage" src="Images/Original.png" alt="a cinnamon bun with a clear glaze">
-    </div>
-    <div class="itemDetailsSideCart">
-        <p><b>Original Bun</b></p>
-        <p>Vanilla Milk Glaze</p>
-        <!--Citation: https://uxplanet.org/how-to-create-a-shopping-cart-ui-using-html-css-e5db3cd55aa0-->
-        <div class="itemCounter">
-            <div class="quantityButton">+</div>
-            <div class="itemCount">1</div>
-            <div class="quantityButton">-</div>
-        </div>
-    </div>
-    <div class="moneyRemoveCart">
-        <p><b>$2.00</b></p>
-        <p class="removeText">Remove</p>
-    </div>
-</div>
-</div>
+<div id="parentCartItemDiv"></div>
 <!--Footer-->
 <footer class="pageFooter"></footer> 
 </body>
