--- a/homework_7/home/index.html
+++ b/homework_7/home/index.html
@@ -1,1 +1,59 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kara Dor's Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="/homework_8/assets/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+</head>
+<body>
+    <div class="container">
+        <!--Above the fold content-->
+        <img class="karaDorLogo" src="/homework_8/assets/images/logo.png" alt="Kara Dor with a handdrawn cartoon hand holding a pencil that looks like it's drawing the name">
+        <div id="aboveFoldHomeContent">
+            <h1 class="userResearcherH1">Kara Dor</h1>
+            <h2 class="userResearcherH2">User Research</h2>
+            <div>
+                <p id="myWork">My Work</p>
+                <div id="myWorkArrowContainer">
+                <img src="/homework_8/assets/images/line_and_arrow.png" alt="a thin orange line with an arrow underneath">
+            </div>
+        </div>
+        <!--Bootstrap grid for photos-->
+       
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-6 GalleryImage">
+                    <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="an active lit up amazon Alexa on top of books">
+                </div>
+                <div class="col-sm-6 GalleryImage">
+                    <img style="max-width: 96%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a man sitting at a computer on a video call">
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-6 GalleryImage">
+                    <img style="max-width: 96%" src="/homework_8/assets/images/library.jpg" alt="a man walking down a colorful library stack of books">
+                </div>
+                <div class="col-sm-6 GalleryImage">
+                    <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="a man walking down a colorful library stack of books">
+                </div>
+            </div>
+        </div><br><br> 
+    </div> 
+    <footer class="container-fluid text-center">
+        <p>Footer</p>
+    </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
 
