Adding Form to the Contact Me Page

--- a/homework_8/home/index.html
+++ b/homework_8/home/index.html
@@ -44,15 +44,21 @@
                     </a>
                 </div>
                 <div class="col-sm-6 GalleryImage">
-                    <img style="max-width: 96%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a man sitting at a computer on a video call">
+                    <a href="/homework_8/case_study_two/crowdsourcing_bias.html">
+                        <img style="max-width: 96%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a man sitting at a computer on a video call">
+                    </a>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-6 GalleryImage">
-                    <img style="max-width: 96%" src="/homework_8/assets/images/library.jpg" alt="a man walking down a colorful library stack of books">
+                    <a href="/homework_8/case_study_three/zoom_self_conscious.html">
+                        <img style="max-width: 96%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a man sitting at a computer on a video call">
+                    </a>
                 </div>
                 <div class="col-sm-6 GalleryImage">
-                    <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="a man walking down a colorful library stack of books">
+                    <a href="/homework_8/case_study_four/library_book.html">
+                        <img style="max-width: 96%" src="/homework_8/assets/images/library.jpg" alt="a man walking down a colorful library stack of books">
+                    </a>
                 </div>
             </div>
         </div><br><br> 
