--- a/homework_8/case_study_two/crowdsourcing_bias.html
+++ b/homework_8/case_study_two/crowdsourcing_bias.html
@@ -1,1 +1,13 @@
 
+<!--Footer-->
+<footer class="container-fluid text-center">
+    <a href="https://dribbble.com/Ktipps">
+        <img class="footerLogo"src="/homework_8/assets/images/dribble.png" alt="dribble basketball logo">
+    </a>
+    <a href="https://www.linkedin.com/in/kara-dor/">
+        <img class="footerLogo" src="/homework_8/assets/images/linkedin.png" alt="LinkedIn logo">
+    </a>
+    <a href="https://www.behance.net/karatippins1">
+        <img class="footerLogo" src="/homework_8/assets/images/behance.png" alt="Behance logo">
+    </a>
+</footer>
