--- a/homework_8/home/index.html
+++ b/homework_8/home/index.html
@@ -17,9 +17,28 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
+    <!--Navbar Made with Bootstrap-->
+    <nav class="navbar">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+            </button>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              <li class="active" ><a class="colorNavLink" href="/homework_8/home/index.html">My Work</a></li>
+              <li><a class="colorNavLink" href="/homework_8/about_me/about_me.html">About Me</a></li>
+              <li><a class="colorNavLink" href="https://drive.google.com/file/d/1qPiHyrOU8ufyThGc5ATZ_YzN1z9zh6xy/view?usp=sharing">Resume</a></li>
+              <li><a class="colorNavLink" href="/homework_8/contact_me/contact_me.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     <div class="container">
-        <!--Above the fold content-->
-        <img class="karaDorLogo" src="/homework_8/assets/images/logo.png" alt="Kara Dor with a handdrawn cartoon hand holding a pencil that looks like it's drawing the name">
+        <!--Banner Welcome, above the fold content-->
         <div id="aboveFoldHomeContent">
             <h1 class="userResearcherH1">Kara Dor</h1>
             <h2 class="userResearcherH2">User Research</h2>
@@ -29,16 +48,11 @@
                 <img src="/homework_8/assets/images/line_and_arrow.png" alt="a thin orange line with an arrow underneath">
             </div>
         </div>
-        <!--Bootstrap grid for photos-->
-
-        <div class="GalleryImage ">
-            <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="an active lit up amazon Alexa on top of books">
-            <div class="blocker">test</div>
-        </div>
+        <!--Bootstrap grid for projects-->
        
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 GalleryImage ">
+                <div class="col-sm-6 GalleryImage">
                     <a href="/homework_8/case_study_one/vui_study.html">
                         <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="an active lit up amazon Alexa on top of books">
                     </a>
@@ -52,19 +66,24 @@
             <div class="row">
                 <div class="col-sm-6 GalleryImage">
                     <a href="/homework_8/case_study_three/zoom_self_conscious.html">
-                        <img style="max-width: 96%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a man sitting at a computer on a video call">
+                        <img style="max-width: 96%" src="/homework_8/assets/images/library.jpg" alt="a man walking down a colorful library stack of books">
                     </a>
                 </div>
                 <div class="col-sm-6 GalleryImage">
                     <a href="/homework_8/case_study_four/library_book.html">
-                        <img style="max-width: 96%" src="/homework_8/assets/images/library.jpg" alt="a man walking down a colorful library stack of books">
+                        <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="a man walking down a colorful library stack of books">
                     </a>
                 </div>
             </div>
         </div><br><br> 
     </div> 
+    <!--<div class="GalleryImage ">
+        <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="an active lit up amazon Alexa on top of books">
+        <div class="blocker">test</div>
+    </div>-->
+   <!--Footer-->
     <footer class="container-fluid text-center">
-        <p>Footer</p>
+        <p class="footerText"> © Kara Dor, 2021</p>
     </footer>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
