Continuing to Iterate on Case Studies

--- a/homework_8/case_study_one/vui_study.html
+++ b/homework_8/case_study_one/vui_study.html
@@ -55,7 +55,7 @@
         </div>
         <div class="container">
             <div class="subsequentRow row">
-                <div class="col-sm-8">
+                <div class="col-sm-9">
                     <br>
                     <h4>The Challenge</h4>
                     <p>Voice User Interfaces are extremely popular from Amazon Alexa to Google Home, but as studies have shown these technologies often showcase disparities in recognition
@@ -63,10 +63,10 @@
                     </div>
             </div>
             <div class="subsequentRow row">
-                <div class="col-sm-8">
+                <div class="col-sm-9">
                     <br>
                     <h4>The Research Goal</h4>
-                    <p>Our team sought to investigate the potential pyschological consequences of repeated failed recognition attempts by a VUI system for different races.</p>
+                    <p>Our team sought to investigate the potential pyschological consequences of repeated failed recognition attempts by a VUI system for white individuals and black individuals in five major American cities.</p>
                     </div>
             </div>
             <div class="subsequentRow row">
@@ -83,8 +83,28 @@
             <div class="subsequentRow row">
                 <div class="col-sm-6">
                     <h4>Learning to Wizard of Oz</h4>
-                    <p>Working the behind-the-scenes mechanisms were a big lesson for me! We leveraged a combination of Keynote and an audio playout software named Play.HT to create the effect that someone was 
-                        speaking to a real VUI. As a research assitant, I was responsible for making sure that the timing of the playout matched the screen that the user saw, which could be difficult.
+                    <p>Working the behind-the-scenes mechanisms was a big lesson for me! We leveraged a combination of Keynote and an audio playout software named Play.HT to create the effect that someone was 
+                        speaking to a real VUI. As a research assitant, I was responsible for making sure that the timing of the playout matched the screen that the user saw, which could be difficult as you're managing participants.
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <img style="max-width: 100%"src="/homework_8/assets/images/playht.png" alt="the Play.ht interface with controls to play pre-written text">
+                </div>
+            </div>
+            <div class="subsequentRow row">
+                <div class="col-sm-9">
+                    <h4>Dealing with Scams in Recruitment</h4>
+                    <p>One challenge our team faced in recruitment was scammers, who motivated by the financial incentive mentioned in our Craiglist posting, would lie about their race or location. 
+                        We had a couple of people attend the study, and were clearly not who they identified themselves to be on the screener. 
+                        In response, we revised our screener to be more specific and altered our protocol to conclude the interview when the researcher recognized someone lied.
+                    </p>
+                </div>
+            </div>
+            <div class="subsequentRow row">
+                <div class="col-sm-9">
+                    <h4>Next Steps</h4>
+                    <p> This study allowed me to led recruitment for the city of Houston, and experience live testing with a Wizard of Oz protocol.
+                        The results of our study should be released in the coming months.
                     </p>
                 </div>
             </div>
