--- a/homework_8/case_study_three/zoom_self_conscious.html
+++ b/homework_8/case_study_three/zoom_self_conscious.html
@@ -1,6 +1,115 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Kara Dor's Portfolio</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/homework_8/assets/style.css">
+</head>
+<body>
+   
+    <!--Navbar Made with Bootstrap-->
+    <nav class="navbar">
+        <div class="container-fluid">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>                        
+            </button>
+          </div>
+          <div class="collapse navbar-collapse" id="myNavbar">
+            <ul class="nav navbar-nav">
+              <li class="active" ><a class="colorNavLink" href="/homework_8/home/index.html">My Work</a></li>
+              <li><a class="colorNavLink" href="/homework_8/about_me/about_me.html">About Me</a></li>
+              <li><a class="colorNavLink" href="https://drive.google.com/file/d/1qPiHyrOU8ufyThGc5ATZ_YzN1z9zh6xy/view?usp=sharing">Resume</a></li>
+              <li><a class="colorNavLink" href="/homework_8/contact_me/contact_me.html">Contact</a></li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!--Page banner content-->
+    <div class="container">
+        <div class="row"> 
+            <div class="col-sm-6">
+                <h2 class="caseStudyHeading">Reducing Self-Consciousness in Remote Classroms</h2>
+                <br>
+                <h4 class="caseStudyIconText"> <span><img src="/homework_8/assets/images/outline_person_black_24dp.png"></span>
+                    </span>User Research Lead & Project Manager</h4>
+                <h4 class="caseStudyIconText"> <span><img src="/homework_8/assets/images/outline_date_range_black_24dp.png"></span>
+                </span>Aug. - Dec. 2021 </h4>
+            </div>
+            <div class="col-sm-6">
+                <img style="max-width: 100%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a black man on  a Zoom call at his desk wearing a plaid shirt">
+            </div>
+        </div>
+          <!--Case Study Opener-->
+        <div class="container">
+            <div class="subsequentRow row">
+                <div class="col-sm-8">
+                    <br>
+                    <br>
+                    <h4 id="leadQuestionRemoteClassrooms">How might we reduce graduate students' self-consciousness in remote classrooms?</h4>
+                    <br>
+                    <br>
+                    <p>When COVID-19 hit in 2019, students and teachers around the world were forced to abondon their classrooms in favor of remote learning environments like Zoom.</p>
+                    </div>
+            </div>
+            <!--Problem and Solution-->
+            <div class="row">
+                <div class="col-sm-6">
+                    <h4>The Problem</h4>
+                    <p><strong>Video conferencing platforms</strong> assist students’ learning, but they also <strong>leave some people 
+                        feeling self-conscious</strong> about their appearance, background, and general performance in 
+                        a recorded environment. These factors can distract students and negatively impact their learning.</p>
+                        <img style="max-width: 70%" src="/homework_8/assets/images/library.jpg" alt="a screen mock-up looking like Zoom with self-affirming prompts">
+                </div>
+                <div class="col-sm-6">
+                    <h4>The Solution</h4>
+                    <p>A design intervention that leverages <strong>digital avatars </strong> and <strong>self-affirming prompts</strong> to reduce physical 
+                        judgements about apperance, bolster graduate students’ self-esteem and confidence, and preserve important body language cues. </p>
+                    <img style="max-width: 70%" src="/homework_8/assets/images/library.jpg" alt="a screen mock-up looking like Zoom with self-affirming prompts">
+                </div>
+            </div>
+        </div>
+            <div class="subsequentRow row">
+                <h4>Research Methods</h4>
+                <img style="max-width: 90%"src="/homework_8/assets/images/zoom_avatar_methods.png" alt="different methods employed including stakeholder mapping, focus groups, literature review, semi-structured interview, surveys, etc.">
+            </div>
+            <div class="subsequentRow row">
+                <h4>Research Timeline</h4>
+                <img style="max-width: 95%" src="/homework_8/assets/images/zoom_timeline.png" alt="timeline of phase 1: generative research and phase 2: prototyping & evaluating. Generative research included focus groups, defining target users, stakeholder mapping, etc.>
+            </div>
+            <div class="subsequentRow row">
+                <div class="col-sm-9">
+                    <h4>Next Steps</h4>
+                    <p> This study allowed me to led recruitment for the city of Houston, and experience live testing with a Wizard of Oz protocol.
+                        The results of our study should be released in the coming months.
+                    </p>
+                </div>
+            </div>
+        
+    </div>
+        <!--Bootstrap grid for photos-->
+       
+    <footer class="container-fluid text-center">
+        <p class="footerText"> © Kara Dor, 2021</p>
+    </footer>
+      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
+</html>
 
-
-<!--Footer-->
+<!--Footer
 <footer class="container-fluid text-center">
     <a href="https://dribbble.com/Ktipps">
         <img class="footerLogo"src="/homework_8/assets/images/dribble.png" alt="dribble basketball logo">
@@ -11,4 +120,4 @@
     <a href="https://www.behance.net/karatippins1">
         <img class="footerLogo" src="/homework_8/assets/images/behance.png" alt="Behance logo">
     </a>
-</footer>
+</footer>-->
