Creating overlaid images on the homepage

--- a/homework_8/case_study_three/zoom_self_conscious.html
+++ b/homework_8/case_study_three/zoom_self_conscious.html
@@ -88,7 +88,7 @@
             </div>
             <div class="subsequentRow row">
                 <h4>Research Timeline</h4>
-                <img style="max-width: 95%" src="/homework_8/assets/images/zoom_timeline.png" alt="timeline of phase 1: generative research and phase 2: prototyping & evaluating. Generative research included focus groups, defining target users, stakeholder mapping, etc.>
+                <img style="max-width: 95%" src="/homework_8/assets/images/zoom_timeline.png" alt="timeline of phase 1: generative research and phase 2: prototyping & evaluating. Generative research included focus groups, defining target users, stakeholder mapping, etc.">
             </div>
             <div class="subsequentRow row">
                 <div class="col-sm-9">
