--- a/homework_8/home/index.html
+++ b/homework_8/home/index.html
@@ -52,26 +52,31 @@
        
         <div class="container">
             <div class="row">
-                <div class="col-sm-6 GalleryImage">
+                <div class="col-sm-6 galleryImageBox">
                     <a href="/homework_8/case_study_one/vui_study.html">
-                        <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="an active lit up amazon Alexa on top of books">
+                        <div class="centered_Gallery_Text">Investigating racial disparities in 
+                                voice opertated technology </div>
+                        <img style="max-width: 100%" src="/homework_8/assets/images/vui_overlaid.png" alt="an active lit up amazon Alexa on top of books">
                     </a>
                 </div>
-                <div class="col-sm-6 GalleryImage">
+                <div class="col-sm-6 galleryImageBox">
                     <a href="/homework_8/case_study_two/crowdsourcing_bias.html">
-                        <img style="max-width: 96%" src="/homework_8/assets/images/crowdsourced.jpg" alt="a hand holding their iphone with Facebook on it">
+                        <div class="centered_Gallery_Text">Leveraging crowdsourcing to reduce algorithmic bias </div>
+                        <img style="max-width: 100%"  src="/homework_8/assets/images/crowdsourced_overlaid.png" alt="a hand holding their iphone with Facebook on it">
                     </a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-6 GalleryImage">
+                <div class="col-sm-6 galleryImageBox">
                     <a href="/homework_8/case_study_three/zoom_self_conscious.html">
-                        <img style="max-width: 96%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a man walking down a colorful library stack of books">
+                        <div class="centered_Gallery_Text">Reducing self consciousness over video conferencing platforms</div>
+                        <img style="max-width: 100%" src="/homework_8/assets/images/overlay_zoom_cover.png" alt="a black man on a Zoom call with a woman">
                     </a>
                 </div>
-                <div class="col-sm-6 GalleryImage">
+                <div class="col-sm-6 galleryImageBox">
                     <a href="/homework_8/case_study_four/library_book.html">
-                        <img style="max-width: 96%" src="/homework_8/assets/images/library.jpg" alt="a man walking down a colorful library stack of books">
+                        <div class="centered_Gallery_Text">Making finding a book at your local library easier</div>
+                        <img id="galleryImageLibrary" src="/homework_8/assets/images/library_overlaid.png" alt="a man walking down a colorful library stack of books">
                     </a>
                 </div>
             </div>
