Building on Case Studies
Revising the contact me page
Adding images and text to case studies 1-4

--- a/homework_8/case_study_one/vui_study.html
+++ b/homework_8/case_study_one/vui_study.html
@@ -47,7 +47,7 @@
                 <h4 class="caseStudyIconText"> <span><img src="/homework_8/assets/images/outline_person_black_24dp.png"></span>
                     </span>User Research Assistant </h4>
                 <h4 class="caseStudyIconText"> <span><img src="/homework_8/assets/images/outline_date_range_black_24dp.png"></span>
-                </span>Aug. - Dec. 2021 </h4>
+                </span>Duration: 4 Months </h4>
             </div>
             <div class="col-sm-6">
                 <img style="max-width: 100%" src="/homework_8/assets/images/vui.jpg" alt="an active lit up amazon Alexa on top of books">
