--- a/homework_8/contact_me/contact_me.html
+++ b/homework_8/contact_me/contact_me.html
@@ -38,10 +38,11 @@
   </nav>
   <div class="container">
     <div class="row"> 
-        <div class="col-sm-9">
+        <div class="col-sm-10">
           <h2>Let's Talk</h2>
           <br>
-          <h4>Feel free to shoot me an email or a message over LinkedIn </h3><br><br>
+          <h4>My past work, the Great British Baking Show, community gardening — all things I love to talk about. </h4><br>
+          <h4>Shoot me a message and let's chat.</h3><br><br>
           <br>
           <a id="Link" href="mailto:kara.a.dor@gmail.com">Email</a>
           <a id ="link" href="https://www.linkedin.com/in/kara-dor/">LinkedIn</a>
