--- a/homework_8/case_study_three/zoom_self_conscious.html
+++ b/homework_8/case_study_three/zoom_self_conscious.html
@@ -47,10 +47,10 @@
                 <h4 class="caseStudyIconText"> <span><img src="/homework_8/assets/images/outline_person_black_24dp.png"></span>
                     </span>User Research Lead & Project Manager</h4>
                 <h4 class="caseStudyIconText"> <span><img src="/homework_8/assets/images/outline_date_range_black_24dp.png"></span>
-                </span>Aug. - Dec. 2021 </h4>
+                </span>Duration: 5 Months </h4>
             </div>
             <div class="col-sm-6">
-                <img style="max-width: 100%" src="/homework_8/assets/images/video_conferencing.jpg" alt="a black man on  a Zoom call at his desk wearing a plaid shirt">
+                <img style="max-width: 100%" src="/homework_8/assets/images/zoom_conference.png" alt="a black man on  a Zoom call at his desk wearing a plaid shirt">
             </div>
         </div>
           <!--Case Study Opener-->
@@ -72,13 +72,11 @@
                     <p><strong>Video conferencing platforms</strong> assist students’ learning, but they also <strong>leave some people 
                         feeling self-conscious</strong> about their appearance, background, and general performance in 
                         a recorded environment. These factors can distract students and negatively impact their learning.</p>
-                        <img style="max-width: 70%" src="/homework_8/assets/images/library.jpg" alt="a screen mock-up looking like Zoom with self-affirming prompts">
                 </div>
                 <div class="col-sm-6">
                     <h4>The Solution</h4>
                     <p>A design intervention that leverages <strong>digital avatars </strong> and <strong>self-affirming prompts</strong> to reduce physical 
                         judgements about apperance, bolster graduate students’ self-esteem and confidence, and preserve important body language cues. </p>
-                    <img style="max-width: 70%" src="/homework_8/assets/images/library.jpg" alt="a screen mock-up looking like Zoom with self-affirming prompts">
                 </div>
             </div>
         </div>
@@ -90,11 +88,40 @@
                 <h4>Research Timeline</h4>
                 <img style="max-width: 95%" src="/homework_8/assets/images/zoom_timeline.png" alt="timeline of phase 1: generative research and phase 2: prototyping & evaluating. Generative research included focus groups, defining target users, stakeholder mapping, etc.">
             </div>
+            <div class="row">
+                <h4>Persuasive Pyschological Methods Used</h4>
+                <div class="col-sm-6">
+                    <h5>Priming & Self-affirmation</h5>
+                    <p>By requiring students to input their core personal traits when onboarding, this intervention self-affirms students' core values about themselves. 
+                        <br> <br> Studies have shown this method bolsters students' confidence. Linking emojis to these values and having those emojis reappear throughout the user's experience on Zoom would only reinforce users' values through priming.
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <h5>Pyschological Distancing </h5>
+                    <p>Our literature review and focus group indicated that concerns about appearance is a major cause of self-consciousness on Zoom. 
+                        <br><br>To help alleviate this concern, we wanted to apply avatar filters, which pyschologically distance users from their own appearance while still giving body language feedback to everyone around them.
+                      </p>
+                </div>
+            </div>
+            <div class="subsequentRow row">
+                <div class="col-sm-9">
+                    <h4>The Solution: Affirmed Avatars</h4>
+                    <p> This study allowed me to led recruitment for the city of Houston, and experience live testing with a Wizard of Oz protocol.
+                        The results of our study should be released in the coming months.
+                    </p>
+                </div>
+                <div class="col-sm-6">
+                    <img style="max-width: 102%" src="/homework_8/assets/images/avatar_zoom_call.png" alt="a Zoom call showing participants avatars">
+                </div>
+                <div class="col-sm-6">
+                    <img style="max-width: 105%" src="/homework_8/assets/images/self_affirming_report_Zoom 2.png" alt="a Zoom call showing participants avatars">
+                </div>
+            </div>
             <div class="subsequentRow row">
                 <div class="col-sm-9">
                     <h4>Next Steps</h4>
-                    <p> This study allowed me to led recruitment for the city of Houston, and experience live testing with a Wizard of Oz protocol.
-                        The results of our study should be released in the coming months.
+                    <p> In our final round of testing users felt that some of the integretions of the emojis did not remind them of their value traits. 
+                        As a next step, we would like to examine the impact the intervention may have post-experiment surveys with attitudal scales in larger sample size experiments.
                     </p>
                 </div>
             </div>
