Final Clean ups

--- a/homework_8/about_me/about_me.html
+++ b/homework_8/about_me/about_me.html
@@ -37,28 +37,14 @@
           </div>
         </div>
       </nav>
-     <!--
-        <div class="aboutMeContainer">
-        <div class="aboutMeTitle">
-            <h2 id="aboutMeH1">So a bit about  me...</h2>
-            <h3 id="aboutMeH2">I use human-centered research to create meaningful user experiences.</h3>
-        </div>
-        <div>
-            <img src="/homework_8/assets/images/kara_dor_profile_circle.png" class="kara_pic" style="width:350px" >
-        </div>
-        <div class="media-body">
-            <br>
-            <p>Hi! I’m Kara. I’m a user researcher and professional storyteller. I strive to use research to create approachable and inclusive experiences that improve peoples’ lives for the better.</p><br>
-            <p>I am currently pursuing my Master of Human of Computer-Interaction at Carnegie Mellon University, focusing on mixed methods user research.</p><br>
-            <p>Before I returned to school, I worked as a government consultant and a journalist at places like the BBC and Bloomberg News. I received my bachelors from Georgetown University, where I majored in English and minored in journalism.</p>
-          </div>
-      </div>
-     --> 
+
 <div class="container">
   <div class="media">
     <div class="media-left media-middle">
+<!--Profile Pic-->
       <img src="/homework_8/assets/images/kara_dor_profile_circle.png" class="kara_pic" style="width:350px" >
     </div>
+<!--Page content-->
     <div class="media-body">
         <h2 id="aboutMeH1">So a bit about  me...</h2>
         <h3 id="aboutMeH2">I use human-centered research to create meaningful user experiences.</h3><br>
