--- a/homework_8/case_study_four/library_book.html
+++ b/homework_8/case_study_four/library_book.html
@@ -38,7 +38,7 @@
           </div>
         </div>
       </nav>
-      <!--Homepage image-->
+      <!--Project Banner-->
     <div class="container">
         <div class="row"> 
             <div class="col-sm-6">
@@ -53,6 +53,7 @@
                 <img style="max-width: 100%" src="/homework_8/assets/images/library.jpg" alt="a man walking down a colorful library stack of books">
             </div>
         </div>
+    <!--Project Intro-->
         <div class="container">
             <div class="subsequentRow row">
                 <div class="col-sm-9">
@@ -64,6 +65,7 @@
                 <div class="col-sm-4">
                     <img style="max-width: 100%" src="/homework_8/assets/images/contemplate_on_book.jpg" alt="a woman with brown hair staring at a bookshelf trying to find a book">
                 </div>
+     <!--The Challenge-->
                 <div class="col-sm-8">
                     <h5>Finding a Book at a Large Library is Not Easy</h5>
                     <p>
@@ -74,6 +76,7 @@
                     </p>
                 </div>
             </div>
+     <!--The Needs-->
             <div class="subsequentRow row">
                 <div class="col-sm-9">
                     <br>
@@ -89,6 +92,7 @@
                     <ol>
                 </div>
             </div>
+    <!--The Solution-->
             <div class="subsequentRow row">
                 <div class="col-sm-8">
                     <br>
@@ -102,6 +106,7 @@
                     <img style="max-width: 80%" src="/homework_8/assets/images/Library Map.png" alt="a prompt with a series of questions for the user performing the test">
                 </div>
             </div>
+    <!--Methods-->
             <div class="subsequentRow row">
                 <div class="col-sm-9">
                     <br>
@@ -118,6 +123,7 @@
                     </p>
                 <div>
             </div>
+    <!--Insights-->
             <div class="subsequentRow row">
                 <br>
                 <h4>Key insights Along the Way</h4>
@@ -134,6 +140,7 @@
                     <h5></h5>
                 </div>
         </div>
+    <!--Solution-->
         <div class="subsequentRow row">
             <br>
             <h4>The End Product</h4>
@@ -147,7 +154,7 @@
                 <img style="max-width: 80%" src="/homework_8/assets/images/shelf_scan_2.png" alt="The final product showing a scanning feature">
             </div>
         </div>
-
+    <!--Next Steps-->
         <div class="subsequentRow row">
             <br>
             <h4>Closing Thoughts & Next Steps</h4>
@@ -169,7 +176,7 @@
             </ul>
             <br><br>
             <p>There are some of the questions I would love to explore given more time.</p>
-        <!--Bootstrap grid for photos-->
+        <!--Footer-->
        
     <footer class="container-fluid text-center">
         <p class="footerText"> © Kara Dor, 2021</p>
