--- a/homework_8/case_study_three/zoom_self_conscious.html
+++ b/homework_8/case_study_three/zoom_self_conscious.html
@@ -80,6 +80,7 @@
                 </div>
             </div>
         </div>
+        <!--Research Methods-->
             <div class="subsequentRow row">
                 <h4>Research Methods</h4>
                 <img style="max-width: 90%"src="/homework_8/assets/images/zoom_avatar_methods.png" alt="different methods employed including stakeholder mapping, focus groups, literature review, semi-structured interview, surveys, etc.">
@@ -88,6 +89,7 @@
                 <h4>Research Timeline</h4>
                 <img style="max-width: 95%" src="/homework_8/assets/images/zoom_timeline.png" alt="timeline of phase 1: generative research and phase 2: prototyping & evaluating. Generative research included focus groups, defining target users, stakeholder mapping, etc.">
             </div>
+        <!--Persuasive Methods-->
             <div class="row">
                 <h4>Persuasive Pyschological Methods Used</h4>
                 <div class="col-sm-6">
@@ -103,6 +105,7 @@
                       </p>
                 </div>
             </div>
+         <!--Solution-->
             <div class="subsequentRow row">
                 <div class="col-sm-9">
                     <h4>The Solution: Affirmed Avatars</h4>
@@ -117,6 +120,7 @@
                     <img style="max-width: 105%" src="/homework_8/assets/images/self_affirming_report_Zoom 2.png" alt="a Zoom call showing participants avatars">
                 </div>
             </div>
+         <!--Next Steps-->
             <div class="subsequentRow row">
                 <div class="col-sm-9">
                     <h4>Next Steps</h4>
@@ -127,7 +131,7 @@
             </div>
         
     </div>
-        <!--Bootstrap grid for photos-->
+        <!--Footer-->
        
     <footer class="container-fluid text-center">
         <p class="footerText"> © Kara Dor, 2021</p>
@@ -135,16 +139,3 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
-
-<!--Footer
-<footer class="container-fluid text-center">
-    <a href="https://dribbble.com/Ktipps">
-        <img class="footerLogo"src="/homework_8/assets/images/dribble.png" alt="dribble basketball logo">
-    </a>
-    <a href="https://www.linkedin.com/in/kara-dor/">
-        <img class="footerLogo" src="/homework_8/assets/images/linkedin.png" alt="LinkedIn logo">
-    </a>
-    <a href="https://www.behance.net/karatippins1">
-        <img class="footerLogo" src="/homework_8/assets/images/behance.png" alt="Behance logo">
-    </a>
-</footer>-->
