--- a/homework_8/home/index.html
+++ b/homework_8/home/index.html
@@ -50,6 +50,7 @@
         </div>
         <!--Bootstrap grid for projects-->
        
+        <!--Project 1: VUI Indie Study-->
         <div class="container">
             <div class="row">
                 <div class="col-sm-6 galleryImageBox">
@@ -59,6 +60,7 @@
                         <img style="max-width: 100%" src="/homework_8/assets/images/vui_overlaid.png" alt="an active lit up amazon Alexa on top of books">
                     </a>
                 </div>
+        <!--Project 2: UCRE - Crowdsourcing AI Bias on Facebook-->
                 <div class="col-sm-6 galleryImageBox">
                     <a href="/homework_8/case_study_two/crowdsourcing_bias.html">
                         <div class="centered_Gallery_Text">Leveraging crowdsourcing to reduce algorithmic bias </div>
@@ -66,6 +68,7 @@
                     </a>
                 </div>
             </div>
+         <!--Project 3: Persuasive Design - Avatars on Zoom -->
             <div class="row">
                 <div class="col-sm-6 galleryImageBox">
                     <a href="/homework_8/case_study_three/zoom_self_conscious.html">
@@ -73,6 +76,7 @@
                         <img style="max-width: 100%" src="/homework_8/assets/images/overlay_zoom_cover.png" alt="a black man on a Zoom call with a woman">
                     </a>
                 </div>
+        <!--Project 3: Interaction Design Studio - Libraries -->
                 <div class="col-sm-6 galleryImageBox">
                     <a href="/homework_8/case_study_four/library_book.html">
                         <div class="centered_Gallery_Text">Making finding a book at your local library easier</div>
@@ -82,10 +86,6 @@
             </div>
         </div><br><br> 
     </div> 
-    <!--<div class="GalleryImage ">
-        <img style="max-width: 96%" src="/homework_8/assets/images/vui.jpg" alt="an active lit up amazon Alexa on top of books">
-        <div class="blocker">test</div>
-    </div>-->
    <!--Footer-->
     <footer class="container-fluid text-center">
         <p class="footerText"> © Kara Dor, 2021</p>
