--- a/homework_8/contact_me/contact_me.html
+++ b/homework_8/contact_me/contact_me.html
@@ -17,6 +17,7 @@
     <link rel="stylesheet" type="text/css" href="/homework_8/assets/style.css">
 </head>
 <body>
+  <!--Bootstrap Nav Bar-->
   <nav class="navbar">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -36,6 +37,7 @@
       </div>
     </div>
   </nav>
+    <!--Contact Page Content-->
   <div class="container">
     <div class="row"> 
         <div class="col-sm-10">
@@ -49,30 +51,6 @@
         </div>
       </div>
     </div>
-  <!--
-<div class="container">
-        <h2 class="overrideBSH2">Contact Me</h2>
-        <form action="/action_page.php">
-            <div class="form-group">
-                <label for="name">Name</label>
-                <input type="text" class="form-control formText" id="name" placeholder="First and last name" name="name">
-            </div>
-            <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" class="form-control" id="email" placeholder="Email" name="email">
-            </div>  
-          <div class="form-group">
-            <label for="phone">Phone Number</label>
-            <input type="number" class="form-control" id="phone" placeholder="(XXX) XXX-XXXX" name="phone">
-          </div>
-          <div class="form-group">
-            <label for="message">Message</label>
-            <input type="text" class="form-control" id="message" placeholder="Message" name="messagse">
-          </div>
-          <button type="submit" class="btn btn-default">Submit</button>
-        </form>
-      </div>
-  -->
     
     <!--Footer-->
     <footer class="container-fluid text-center">
